Refactor and modularize infrastructure setup and main application
- Split Docker Compose configuration into separate files: one for infrastructure (docker-compose-infra.yml) and one for the application (docker-compose.yml).
- Modularize application initialization by creating an Application class to handle setup and running of server components.
- Update main.py to use the new Application class for starting the application.
- Move logging setup to logger_adapter.py and create a LoggingPort to manage logging operations.
- Refactor HttpServer to initialize the Flask app and setup API documentation within the class.
- Ensure that all components are properly connected and initialized via dependency injection.
- Added configurations and setup to support testing environments.

Preparing the project setup to be fully available for tests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 
+networks:
+  ecommerce_network:
+    driver: bridge
+    external: true
+
 services:
   flask_app:
     container_name: flask_app
@@ -17,34 +22,26 @@ services:
     ports:
       - 5000:5000
     volumes:
-    - .:/app
-    depends_on:
-      - rabbitmq
-      - postgres
-  rabbitmq:
-    image: "rabbitmq:3-management"
-    volumes:
-      - rabbitmq_data:/var/lib/rabbitmq
+      - .:/app
+    networks:
+      - ecommerce_network
+
+  test:
+    container_name: test
+    build: .
+    restart: "no"
+    command: python -m unittest
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
+      - DB_HOST=${DB_HOST}
     ports:
-      - "5672:5672"
-      - "15672:15672"
-  postgres:
-    image: postgres:latest
-    restart: always
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
-      PGPORT: ${DB_PORT}
-    ports:
-      - ${DB_PORT}:${DB_PORT}
+      - "5678:5678"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-
-volumes:
-  rabbitmq_data:
-  pgdata:
-
+      - .:/app
+    networks:
+      - ecommerce_network
